compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__no_body_or_implementation.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 266
expression: "\npub fn one(x: Int) -> Float\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn one(x: Int) -> Float


----- ERROR
error: Function without an implementation
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub fn one(x: Int) -> Float
  │ ^^^^^^^^^^^^^^^^^^

We can't compile this function as it doesn't have an
implementation. Add a body or an external implementation
using the `@external` attribute.
